changed academic building highlight for Business and Computing Schools

--- a/public/css/academic-buildings-stylesheet.css
+++ b/public/css/academic-buildings-stylesheet.css
@@ -145,6 +145,7 @@ area {
 }
 */
 
+/*
 #bus_stops_overlay, 
 #employee_parking_overlay, 
 #first_aid_overlay, 
@@ -156,6 +157,7 @@ area {
 #bike_overlay{
   display: none
 }
+*/
 
 /*
 #map_area {
