--- a/views/services-supports.hbs
+++ b/views/services-supports.hbs
@@ -5,40 +5,40 @@
     <div class="col-sm-2">
         <div class="sidenav">
             <div class="sidenav-cont">
-                <button class="dropdown-btn">Accessibility Services</button>
-                <button class="dropdown-btn">Apprenticeship Services</button>
-                <button class="dropdown-btn">Bookstore</button>
-                <button class="dropdown-btn">Bookstore Annex</button>
-                <button class="dropdown-btn">Centre for Workplace Education (Co-Op)</button>
-                <button class="dropdown-btn">Contemplation &amp; Ablution Room</button>
-                <button class="dropdown-btn">Counselling and Student Development</button>
-                <button class="dropdown-btn">Financial Aid and Awards</button>
-                <button class="dropdown-btn">Indigenous Services</button>
-                <button class="dropdown-btn">International Student Centre</button>
-                <button class="dropdown-btn">IT Services</button>
-                <button class="dropdown-btn">Learning Commons &amp; Writing Centre</button>
-                <button class="dropdown-btn">Library</button>
-                <button class="dropdown-btn">Program Advising</button>
-                <button class="dropdown-btn">Recreation Services</button>
-                <button class="dropdown-btn">Respect, Diversity &amp; Inclusion Office</button>
-                <button class="dropdown-btn">Security</button>
-                <button class="dropdown-btn">Sleep pods</button>
-                <button class="dropdown-btn">Student Association</button>
-                <button class="dropdown-btn">Student Employment Services (eJobs)</button>
-                <button class="dropdown-btn">Student Health Services</button>
-                <button class="dropdown-btn">Student Housing</button>
-                <button class="dropdown-btn">Student Information and Enrolment Services</button>
-                <button class="dropdown-btn">Student Life Office</button>
-                <button class="dropdown-btn">Sun Stations</button>
-                <button class="dropdown-btn">Trades Learning Centre</button>
+                <button class="dropdown-btn">Academic Learning Services <i class="fa fa-caret-down"></i> </button>
+                <div class="dropdown-container">
+                    <button>Accessibility Services</button>
+                </div>
+                <button class="dropdown-btn">Health and Wellness <i class="fa fa-caret-down"></i> </button>
+                <div class="dropdown-container">
+                    <button>Accessibility Services</button>
+                </div>
+                <button class="dropdown-btn">Career Services <i class="fa fa-caret-down"></i> </button>
+                <div class="dropdown-container">
+                    <button>Accessibility Services</button>
+                </div>
+                <button class="dropdown-btn">Student Life <i class="fa fa-caret-down"></i> </button>
+                <div class="dropdown-container">
+                    <button data-building="SW01" data-service="Accessibility Services"  data-description="Accessibility Services provides access and accommodation to
+individuals with invisible, temporary and/or permanent functional
+limitations, or disabilities. Support may include exam and classroom
+accommodations, interpreting, transcribing, alternate format
+material and access to adaptive technology" onclick="selectAcademicSchools('SW01, SW02', 'SW01', 'MMMMM MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM MMMMMMMMMMMMMMMMMM MMMMMMMMMMMMMMMM MMMMMMMMMMMMMMMM MM MMMMMMM MMMMM MMMMMM MMMMMMMM MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM MMMMMMMMMMMM MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM MMMMMMMMMMMMMMMMMMMMMMMM MMMMMMMMMMMMMMMMMM')">Accessibility Services</button>
+                </div>
+                <button class="dropdown-btn">Financial Aid <i class="fa fa-caret-down"></i> </button>
+                <div class="dropdown-container">
+                    <button>Accessibility Services</button>
+                </div>
+                <button class="dropdown-btn">Student Safety and Responsibility <i class="fa fa-caret-down"></i> </button>
+                <div class="dropdown-container">
+                    <button>Accessibility Services</button>
+                </div>
             </div>
         </div>
     </div>
     <div class="col-sm-10">
-        <img src="/media/bcitmap.png" alt="BCIT Burnaby Campus Map">
-        {{!-- <form action="/main_menu" method="GET">
-            <button type="submit" name="mainMenu" id="main-menu-btn">Main Menu</button>
-        </form> --}}
+        {{>overlay}}
         <button name="mainMenu" onclick="main_menu()" id="main-menu-btn">Main Menu</button>
     </div>
 </div>
+<script src="js/script.js"></script>
