--- a/views/services-supports.hbs
+++ b/views/services-supports.hbs
@@ -1,8 +1,8 @@
 <div class="heading">
     Campus Services and Supports
 </div>
-<div class="campus-map">
-    <div class="col-sm-2">
+<div id="campus-map" class="campus-map">
+    {{!-- <div class="col-sm-2">
         <div class="sidenav">
             <div class="sidenav-cont">
                 <button class="dropdown-btn">Academic Learning Services <i class="fa fa-caret-down"></i> </button>
@@ -39,6 +39,12 @@ material and access to adaptive technology" onclick="selectAcademicSchools('SW01
     <div class="col-sm-10">
         {{>overlay}}
         <button name="mainMenu" onclick="main_menu()" id="main-menu-btn">Main Menu</button>
+    </div> --}}
+</div>
+<div id="loading" class="d-flex justify-content-center align-items-center" style="height: 100%">
+    <div class="spinner-border" style="width: 6rem; height: 6rem;" role="status">
+        <span class="sr-only">Loading...</span>
     </div>
 </div>
 <script src="js/script.js"></script>
+<script src="js/services.js"></script>
