--- a/public/css/academic-buildings-stylesheet.css
+++ b/public/css/academic-buildings-stylesheet.css
@@ -53,7 +53,7 @@ body {
   float: right;
 }
 
-.col-sm-2 button, .dropdown-btn {
+.col-sm-2 button, .school-btn {
   padding: 10px;   
   text-decoration: none;
   font-size: 13px;
@@ -66,7 +66,7 @@ body {
   outline: none;
 }
 
-.dropdown-btn {
+.school-btn {
   padding: 10px;
   text-decoration: none;
   font-size: 14px;
@@ -86,21 +86,7 @@ body {
     font-size: 180%;
 }
 
-.dropdown-container {
-  display: none;
-  border-bottom-left-radius: 40px;
-}
-
-.dropdown-container button {
-  padding-left: 50px;    
-}
-
-.fa-caret-down {
-  float: right;
-  padding-right: 5px;
-}
-
-.col-sm-2 button:hover, .dropdown-btn:hover{
+.col-sm-2 button:hover, .school-btn:hover{
   border-top-left-radius: 40px;
   border-bottom-left-radius: 40px;
 }
@@ -108,10 +94,6 @@ body {
 .active:hover{
   border-top-left-radius: 40px;
   border-bottom-left-radius: 0;
-}
-
-.dropdown-container button:last-child:hover{
-  border-bottom-left-radius: 40px;
 }
 
 area { 
@@ -167,7 +149,8 @@ area {
 }
 */
 
+/*
 #details_box {
   position: absolute;
   bottom: 0px;
-}
+}*/
