reverted how tooltips dissapear
reverted how tooltips dissapear

--- a/views/partials/overlay.hbs
+++ b/views/partials/overlay.hbs
@@ -104,7 +104,7 @@
                 <area target="" class="sparking" id="LOTS2"  building="LOTS2"  full="LOT S"  alt="LOT S2" title="LOT S2" href="#" coords="2294,1382,2365,1460" shape="rect">
                 <area target="" class="sparking" id="LOTM"   building="LOTM"   full="LOT M"  alt="LOT M" title="LOT M" href="#" coords="3185,900,2913,832" shape="rect">
                 <area target="" class="sparking" id="LOTH"   building="LOTH"   full="LOT H"  alt="LOT H" title="LOT H" href="#" coords="2745,185,2860,396" shape="rect">
-                <area target="" class="sparking" id="LOTD"   building="LOTD"   full="LOT D"  alt="LOT D" title="LOT D" href="#" coords="3411,483,3597,487,3708,540,3615,694" shape="poly">
+                <area target="" class="sparking" id="LOTO"   building="LOTO"   full="LOT O"  alt="LOT O" title="LOT O" href="#" coords="3411,483,3597,487,3708,540,3615,694" shape="poly">
             <!-- employee parking-->
                 <area target="" class="eparking" id="LOT19"   building="LOT19"   full="LOT 19"   alt="LOT 19" title="LOT 19" href="" coords="690,821,797,914" shape="rect">
                 <area target="" class="eparking" id="LOT16"   building="LOT16"   full="LOT 16"   alt="LOT 16" title="LOT 16" href="" coords="797,937,890,1033" shape="rect">
