--- a/views/partials/overlay.hbs
+++ b/views/partials/overlay.hbs
@@ -104,52 +104,52 @@
                 <area target="" data-key="T" class="bus" full ="" id="WayburneWD" building="WayburneWD" alt="WayburneWD" title="WayburneWD" href="#" coords="3901,191,3941,231" shape="rect">
 
             <!-- Parking lots -->
-                <area target="" class="sparking" id="LOTA"   building="LOTA"   parking-key="LOT A"   alt="LOT A" title="LOT A" href="#" coords="776,106,955,285" shape="rect">
-                <area target="" class="sparking" id="LOTB"   building="LOTB"   parking-key="LOT B"   alt="LOT B" title="LOT B" href="#" coords="983,119,1234,205" shape="rect">
-                <area target="" class="sparking" id="LOTD"   building="LOTD"   parking-key="LOT D"   alt="LOT D" title="LOT D" href="#" coords="1936,214,2190,367" shape="rect">
-                <area target="" class="sparking" id="LOTF"   building="LOTF"   parking-key="LOT F"   alt="LOT F" title="LOT F" href="#" coords="2226,212,2487,363" shape="rect">
-                <area target="" class="sparking" id="LOTE"   building="LOTE"   parking-key="LOT E"   alt="LOT E" title="LOT E" href="#" coords="1911,132,2501,186" shape="rect">
-                <area target="" class="sparking" id="LOTG"   building="LOTG"   parking-key="LOT G"   alt="LOT G" title="LOT G" href="#" coords="2530,129,2863,175" shape="rect">
-                <area target="" class="sparking" id="LOTK"   building="LOTK"   parking-key="LOT K"   alt="LOT K" title="LOT K" href="#" coords="2795,545,2870,749" shape="rect">
-                <area target="" class="sparking" id="LOTL"   building="LOTL"   parking-key="LOT L"   alt="LOT L" title="LOT L" href="#" coords="2888,536,2888,761,3182,772,3185,697,3060,539" shape="poly">
-                <area target="" class="sparking" id="LOTJ"   building="LOTJ"   parking-key="LOT J"   alt="LOT J" title="LOT J" href="#" coords="2874,910,2809,810" shape="rect">
-                <area target="" class="sparking" id="LOTN"   building="LOTN"   parking-key="LOT N"   alt="LOT N" title="LOT N" href="#" coords="3500,938,2687,934,2684,1009,2512,1031,2340,1059,2147,1153,2154,1181,2365,1095,2523,1067,2695,1049,3160,1052,3167,1024,3504,1024" shape="poly">
-                <area target="" class="sparking" id="LOTQ"   building="LOTQ"   parking-key="LOT Q"   alt="LOT Q" title="LOT Q" href="#" coords="160,965,396,1180" shape="rect">
-                <area target="" class="sparking" id="LOTS"   building="LOTS"   parking-key="LOT S"   alt="LOT S" title="LOT S" href="#" coords="2817,1285,2885,1349" shape="rect">
-                <area target="" class="sparking" id="LOTS2"  building="LOTS2"  parking-key="LOT S"  alt="LOT S2" title="LOT S2" href="#" coords="2294,1382,2365,1460" shape="rect">
-                <area target="" class="sparking" id="LOTM"   building="LOTM"   parking-key="LOT M"  alt="LOT M" title="LOT M" href="#" coords="3185,900,2913,832" shape="rect">
-                <area target="" class="sparking" id="LOTH"   building="LOTH"   parking-key="LOT H"  alt="LOT H" title="LOT H" href="#" coords="2745,185,2860,396" shape="rect">
-                <area target="" class="sparking" id="LOTO"   building="LOTO"   parking-key="LOT O"  alt="LOT O" title="LOT O" href="#" coords="3411,483,3597,487,3708,540,3615,694" shape="poly">
+                <area target="" class="sparking" id="LOTA"   full="LOT A" building="LOTA"   parking-key="LOT A"   alt="LOT A" title="LOT A" href="#" coords="776,106,955,285" shape="rect">
+                <area target="" class="sparking" id="LOTB"   full="LOT B" building="LOTB"   parking-key="LOT B"   alt="LOT B" title="LOT B" href="#" coords="983,119,1234,205" shape="rect">
+                <area target="" class="sparking" id="LOTD"   full="LOT D" building="LOTD"   parking-key="LOT D"   alt="LOT D" title="LOT D" href="#" coords="1936,214,2190,367" shape="rect">
+                <area target="" class="sparking" id="LOTF"   full="LOT F" building="LOTF"   parking-key="LOT F"   alt="LOT F" title="LOT F" href="#" coords="2226,212,2487,363" shape="rect">
+                <area target="" class="sparking" id="LOTE"   full="LOT E" building="LOTE"   parking-key="LOT E"   alt="LOT E" title="LOT E" href="#" coords="1911,132,2501,186" shape="rect">
+                <area target="" class="sparking" id="LOTG"   full="LOT G" building="LOTG"   parking-key="LOT G"   alt="LOT G" title="LOT G" href="#" coords="2530,129,2863,175" shape="rect">
+                <area target="" class="sparking" id="LOTK"   full="LOT K" building="LOTK"   parking-key="LOT K"   alt="LOT K" title="LOT K" href="#" coords="2795,545,2870,749" shape="rect">
+                <area target="" class="sparking" id="LOTL"   full="LOT L" building="LOTL"   parking-key="LOT L"   alt="LOT L" title="LOT L" href="#" coords="2888,536,2888,761,3182,772,3185,697,3060,539" shape="poly">
+                <area target="" class="sparking" id="LOTJ"   full="LOT J" building="LOTJ"   parking-key="LOT J"   alt="LOT J" title="LOT J" href="#" coords="2874,910,2809,810" shape="rect">
+                <area target="" class="sparking" id="LOTN"   full="LOT N" building="LOTN"   parking-key="LOT N"   alt="LOT N" title="LOT N" href="#" coords="3500,938,2687,934,2684,1009,2512,1031,2340,1059,2147,1153,2154,1181,2365,1095,2523,1067,2695,1049,3160,1052,3167,1024,3504,1024" shape="poly">
+                <area target="" class="sparking" id="LOTQ"   full="LOT Q" building="LOTQ"   parking-key="LOT Q"   alt="LOT Q" title="LOT Q" href="#" coords="160,965,396,1180" shape="rect">
+                <area target="" class="sparking" id="LOTS"   full="LOT S" building="LOTS"   parking-key="LOT S"   alt="LOT S" title="LOT S" href="#" coords="2817,1285,2885,1349" shape="rect">
+                <area target="" class="sparking" id="LOTS2"  full="LOT S" building="LOTS2"  parking-key="LOT S"  alt="LOT S2" title="LOT S2" href="#" coords="2294,1382,2365,1460" shape="rect">
+                <area target="" class="sparking" id="LOTM"   full="LOT M" building="LOTM"   parking-key="LOT M"  alt="LOT M" title="LOT M" href="#" coords="3185,900,2913,832" shape="rect">
+                <area target="" class="sparking" id="LOTH"   full="LOT H" building="LOTH"   parking-key="LOT H"  alt="LOT H" title="LOT H" href="#" coords="2745,185,2860,396" shape="rect">
+                <area target="" class="sparking" id="LOTO"   full="LOT O" building="LOTO"   parking-key="LOT O"  alt="LOT O" title="LOT O" href="#" coords="3411,483,3597,487,3708,540,3615,694" shape="poly">
             <!-- student housing parking-->
                 <area target="" class="parking" id="house"  building="house"  parking-key="Student Housing Parking"  alt="STUDENT HOUSING PARKING" title="STUDENT HOUSING PARKING" href="#" coords="2333,976,2344,1048,2530,1015,2673,997,2681,915,2509,933" shape="poly">
             <!-- accessible parking icons-->
-                <area target="" class="aparking" id="HC01" building="HC01" parking-key="accessible parking" alt="HC01" title="HC01" href="#" coords="164,257,210,299" shape="rect">
-                <area target="" class="aparking" id="HC02" building="HC02" parking-key="accessible parking" alt="HC02" title="HC02" href="#" coords="124,482,167,521" shape="rect">
-                <area target="" class="aparking" id="HC03" building="HC03" parking-key="accessible parking" alt="HC03" title="HC03" href="#" coords="339,645,389,703" shape="rect">
-                <area target="" class="aparking" id="HC04" building="HC04" parking-key="accessible parking" alt="HC04" title="HC04" href="#" coords="181,786,239,829" shape="rect">
-                <area target="" class="aparking" id="HC05" building="HC05" parking-key="accessible parking" alt="HC05" title="HC05" href="#" coords="421,1052,482,1110" shape="rect">
-                <area target="" class="aparking" id="HC06" building="HC06" parking-key="accessible parking" alt="HC06" title="HC06" href="#" coords="557,1222,618,1275" shape="rect">
-                <area target="" class="aparking" id="HC07" building="HC07" parking-key="accessible parking" alt="HC07" title="HC07" href="#" coords="1019,1036,1080,1093" shape="rect">
-                <area target="" class="aparking" id="HC08" building="HC08" parking-key="accessible parking" alt="HC08" title="HC08" href="#" coords="1177,1222,1248,1279" shape="rect">
-                <area target="" class="aparking" id="HC09" building="HC09" parking-key="accessible parking" alt="HC09" title="HC09" href="#" coords="1241,780,1306,845" shape="rect">
-                <area target="" class="aparking" id="HC10" building="HC10" parking-key="accessible parking" alt="HC11" title="HC11" href="#" coords="869,280,940,327" shape="rect">
-                <area target="" class="aparking" id="HC11" building="HC11" parking-key="accessible parking" alt="HC12" title="HC12" href="#" coords="1270,338,1331,406" shape="rect">
-                <area target="" class="aparking" id="HC12" building="HC12" parking-key="accessible parking" alt="HC13" title="HC13" href="#" coords="1367,523,1409,569" shape="rect">
-                <area target="" class="aparking" id="HC13" building="HC13" parking-key="accessible parking" alt="HC14" title="HC14" href="#" coords="1442,613,1506,678" shape="rect">
-                <area target="" class="aparking" id="HC14" building="HC14" parking-key="accessible parking" alt="HC15" title="HC15" href="#" coords="1803,1170,1875,1238" shape="rect">
-                <area target="" class="aparking" id="HC15" building="HC15" parking-key="accessible parking" alt="HC16" title="HC16" href="#" coords="1699,421,1753,486" shape="rect">
-                <area target="" class="aparking" id="HC16" building="HC16" parking-key="accessible parking" alt="HC17" title="HC17" href="#" coords="1929,326,2000,390" shape="rect">
-                <area target="" class="aparking" id="HC17" building="HC17" parking-key="accessible parking" alt="HC18" title="HC18" href="#" coords="2079,321,2151,385" shape="rect">
-                <area target="" class="aparking" id="HC18" building="HC18" parking-key="accessible parking" alt="HC19" title="HC19" href="#" coords="2330,954,2412,1012" shape="rect">
-                <area target="" class="aparking" id="HC19" building="HC19" parking-key="accessible parking" alt="HC20" title="HC20" href="#" coords="2530,1223,2612,1287" shape="rect">
-                <area target="" class="aparking" id="HC20" building="HC20" parking-key="accessible parking" alt="HC21" title="HC21" href="#" coords="2387,1340,2459,1408" shape="rect">
-                <area target="" class="aparking" id="HC21" building="HC21" parking-key="accessible parking" alt="HC22" title="HC22" href="#" coords="2369,1436,2433,1479" shape="rect">
-                <area target="" class="aparking" id="HC22" building="HC22" parking-key="accessible parking" alt="HC23" title="HC23" href="#" coords="2523,1466,2609,1538" shape="rect">
-                <area target="" class="aparking" id="HC23" building="HC23" parking-key="accessible parking" alt="HC24" title="HC24" href="#" coords="2448,200,2512,261" shape="rect">
-                <area target="" class="aparking" id="HC24" building="HC24" parking-key="accessible parking" alt="HC25" title="HC25" href="#" coords="3300,189,3372,257" shape="rect">
-                <area target="" class="aparking" id="HC25" building="HC25" parking-key="accessible parking" alt="HC26" title="HC26" href="#" coords="3307,403,3375,468" shape="rect">
+                <area target="" class="aparking" id="HC01" full="accessible parking" building="HC01" parking-key="accessible parking" alt="HC01" title="HC01" href="#" coords="164,257,210,299" shape="rect">
+                <area target="" class="aparking" id="HC02" full="accessible parking" building="HC02" parking-key="accessible parking" alt="HC02" title="HC02" href="#" coords="124,482,167,521" shape="rect">
+                <area target="" class="aparking" id="HC03" full="accessible parking" building="HC03" parking-key="accessible parking" alt="HC03" title="HC03" href="#" coords="339,645,389,703" shape="rect">
+                <area target="" class="aparking" id="HC04" full="accessible parking" building="HC04" parking-key="accessible parking" alt="HC04" title="HC04" href="#" coords="181,786,239,829" shape="rect">
+                <area target="" class="aparking" id="HC05" full="accessible parking" building="HC05" parking-key="accessible parking" alt="HC05" title="HC05" href="#" coords="421,1052,482,1110" shape="rect">
+                <area target="" class="aparking" id="HC06" full="accessible parking" building="HC06" parking-key="accessible parking" alt="HC06" title="HC06" href="#" coords="557,1222,618,1275" shape="rect">
+                <area target="" class="aparking" id="HC07" full="accessible parking" building="HC07" parking-key="accessible parking" alt="HC07" title="HC07" href="#" coords="1019,1036,1080,1093" shape="rect">
+                <area target="" class="aparking" id="HC08" full="accessible parking" building="HC08" parking-key="accessible parking" alt="HC08" title="HC08" href="#" coords="1177,1222,1248,1279" shape="rect">
+                <area target="" class="aparking" id="HC09" full="accessible parking" building="HC09" parking-key="accessible parking" alt="HC09" title="HC09" href="#" coords="1241,780,1306,845" shape="rect">
+                <area target="" class="aparking" id="HC10" full="accessible parking" building="HC10" parking-key="accessible parking" alt="HC11" title="HC11" href="#" coords="869,280,940,327" shape="rect">
+                <area target="" class="aparking" id="HC11" full="accessible parking" building="HC11" parking-key="accessible parking" alt="HC12" title="HC12" href="#" coords="1270,338,1331,406" shape="rect">
+                <area target="" class="aparking" id="HC12" full="accessible parking" building="HC12" parking-key="accessible parking" alt="HC13" title="HC13" href="#" coords="1367,523,1409,569" shape="rect">
+                <area target="" class="aparking" id="HC13" full="accessible parking" building="HC13" parking-key="accessible parking" alt="HC14" title="HC14" href="#" coords="1442,613,1506,678" shape="rect">
+                <area target="" class="aparking" id="HC14" full="accessible parking" building="HC14" parking-key="accessible parking" alt="HC15" title="HC15" href="#" coords="1803,1170,1875,1238" shape="rect">
+                <area target="" class="aparking" id="HC15" full="accessible parking" building="HC15" parking-key="accessible parking" alt="HC16" title="HC16" href="#" coords="1699,421,1753,486" shape="rect">
+                <area target="" class="aparking" id="HC16" full="accessible parking" building="HC16" parking-key="accessible parking" alt="HC17" title="HC17" href="#" coords="1929,326,2000,390" shape="rect">
+                <area target="" class="aparking" id="HC17" full="accessible parking" building="HC17" parking-key="accessible parking" alt="HC18" title="HC18" href="#" coords="2079,321,2151,385" shape="rect">
+                <area target="" class="aparking" id="HC18" full="accessible parking" building="HC18" parking-key="accessible parking" alt="HC19" title="HC19" href="#" coords="2330,954,2412,1012" shape="rect">
+                <area target="" class="aparking" id="HC19" full="accessible parking" building="HC19" parking-key="accessible parking" alt="HC20" title="HC20" href="#" coords="2530,1223,2612,1287" shape="rect">
+                <area target="" class="aparking" id="HC20" full="accessible parking" building="HC20" parking-key="accessible parking" alt="HC21" title="HC21" href="#" coords="2387,1340,2459,1408" shape="rect">
+                <area target="" class="aparking" id="HC21" full="accessible parking" building="HC21" parking-key="accessible parking" alt="HC22" title="HC22" href="#" coords="2369,1436,2433,1479" shape="rect">
+                <area target="" class="aparking" id="HC22" full="accessible parking" building="HC22" parking-key="accessible parking" alt="HC23" title="HC23" href="#" coords="2523,1466,2609,1538" shape="rect">
+                <area target="" class="aparking" id="HC23" full="accessible parking" building="HC23" parking-key="accessible parking" alt="HC24" title="HC24" href="#" coords="2448,200,2512,261" shape="rect">
+                <area target="" class="aparking" id="HC24" full="accessible parking" building="HC24" parking-key="accessible parking" alt="HC25" title="HC25" href="#" coords="3300,189,3372,257" shape="rect">
+                <area target="" class="aparking" id="HC25" full="accessible parking" building="HC25" parking-key="accessible parking" alt="HC26" title="HC26" href="#" coords="3307,403,3375,468" shape="rect">
 
-1
+
             <!-- Electrical vehical,carshare,bike repair areas-->
                 <area target="" class="ev_parking" id="EV1"full="Electric Charging" building = "EV1" parking-key = "EV1" alt="EV1" title="" href="#" coords="178,243,249,301" shape="rect">
                 <area target="" class="ev_parking" id="EV2"full="Electric Charging" building = "EV2" parking-key = "EV2" alt="EV2" title="" href="#" coords="339,480,403,540" shape="rect">
