added handicap overlay
added handicap overlay

--- a/views/partials/overlay.hbs
+++ b/views/partials/overlay.hbs
@@ -7,7 +7,7 @@
             <img id="employee_parking_overlay" src="/media/overlays/employee_parking_overlay.png" usemap="#image-map">
             <img id="first_aid_overlay" src="/media/overlays/first_aid_overlay.png" usemap="#image-map">
             <img id="food_services_overlay" src="/media/overlays/food_services_overlay.png" usemap="#image-map">
-            <img id="handicap_overlay" src="/media/overlays/handicap_overlay.png" usemap="#image-map">
+            <img id="handicap_overlay" src="/media/overlays/handicap_merged.png" usemap="#image-map">
             <img id="security_overlay" src="/media/overlays/security_overlay.png" usemap="#image-map">
             <img id="student_parking_overlay" src="/media/overlays/student_parking_overlay.png" usemap="#image-map">
             <img id="visitor_parking_overlay" src="/media/overlays/visitor_parking_overlay.png" usemap="#image-map">
@@ -165,14 +165,14 @@
             
 
             <!-- pay station and motorcycles -->
-                <area target="" class="mc_parking" id="MC1"  full= "motorcycle parking" building = "MC1"  motorcyle-key= "MC1" alt="MC1"  title="" href="" coords="110,604,156,647" shape="rect">
-                <area target="" class="mc_parking" id="MC2"  full= "motorcycle parking" building = "MC2"  motorcyle-key= "MC2" alt="MC2"  title="" href="" coords="110,668,160,704" shape="rect">
-                <area target="" class="mc_parking" id="MC3"  full= "motorcycle parking" building = "MC3"  motorcyle-key= "MC3" alt="MC3"  title="" href="" coords="1771,1055,1814,1094" shape="rect">
-                <area target="" class="mc_parking" id="MC4"  full= "motorcycle parking" building = "MC4"  motorcyle-key= "MC4" alt="MC4"  title="" href="" coords="1710,416,1757,459" shape="rect">
-                <area target="" class="mc_parking" id="MC5"  full= "motorcycle parking" building = "MC5"  motorcyle-key= "MC5" alt="MC5"  title="" href="" coords="822,237,876,284" shape="rect">
-                <area target="" class="mc_parking" id="MC6"  full= "motorcycle parking" building = "MC6"  motorcyle-key= "MC6" alt="MC6"  title="" href="" coords="368,857,418,900" shape="rect">
-                <area target="" class="mc_parking" id="MC7"  full= "motorcycle parking" building = "MC7"  motorcyle-key= "MC7" alt="MC7"  title="" href="" coords="2394,1401,2437,1451" shape="rect">
-                <area target="" class="mc_parking" id="MC8"  full= "motorcycle parking" building = "MC8"  motorcyle-key= "MC8" alt="MC8"  title="" href="" coords="280,432,327,478" shape="rect">
+                <area target="" class="mc_parking" id="MC1"  full= "motorcycle parking" building = "MC1"  motorcycle-key= "MC1" alt="MC1"  title="" href="" coords="110,604,156,647" shape="rect">
+                <area target="" class="mc_parking" id="MC2"  full= "motorcycle parking" building = "MC2"  motorcycle-key= "MC2" alt="MC2"  title="" href="" coords="110,668,160,704" shape="rect">
+                <area target="" class="mc_parking" id="MC3"  full= "motorcycle parking" building = "MC3"  motorcycle-key= "MC3" alt="MC3"  title="" href="" coords="1771,1055,1814,1094" shape="rect">
+                <area target="" class="mc_parking" id="MC4"  full= "motorcycle parking" building = "MC4"  motorcycle-key= "MC4" alt="MC4"  title="" href="" coords="1710,416,1757,459" shape="rect">
+                <area target="" class="mc_parking" id="MC5"  full= "motorcycle parking" building = "MC5"  motorcycle-key= "MC5" alt="MC5"  title="" href="" coords="822,237,876,284" shape="rect">
+                <area target="" class="mc_parking" id="MC6"  full= "motorcycle parking" building = "MC6"  motorcycle-key= "MC6" alt="MC6"  title="" href="" coords="368,857,418,900" shape="rect">
+                <area target="" class="mc_parking" id="MC7"  full= "motorcycle parking" building = "MC7"  motorcycle-key= "MC7" alt="MC7"  title="" href="" coords="2394,1401,2437,1451" shape="rect">
+                <area target="" class="mc_parking" id="MC8"  full= "motorcycle parking" building = "MC8"  motorcycle-key= "MC8" alt="MC8"  title="" href="" coords="280,432,327,478" shape="rect">
                 <area target="" class="ps_parking" id="PS1"  full= "pay station"        building = "PS1"  paystation-key= "PS1" alt="PS1"  title="" href="" coords="199,402,260,449" shape="rect">
                 <area target="" class="ps_parking" id="PS2"  full= "pay station"        building = "PS2"  paystation-key= "PS2" alt="PS2"  title="" href="" coords="224,772,282,811" shape="rect">
                 <area target="" class="ps_parking" id="PS3"  full= "pay station"        building = "PS3"  paystation-key= "PS3" alt="PS3"  title="" href="" coords="958,222,1012,265" shape="rect">
