Implemented frontend rendering

--- a/views/services-supports.hbs
+++ b/views/services-supports.hbs
@@ -46,5 +46,5 @@ material and access to adaptive technology" onclick="selectAcademicSchools('SW01
         <span class="sr-only">Loading...</span>
     </div>
 </div>
-<script src="js/script.js"></script>
+<script src="/panzoom/panzoom.js"></script>
 <script src="js/services.js"></script>
