--- a/public/css/basic-nav-stylesheet.css
+++ b/public/css/basic-nav-stylesheet.css
@@ -140,7 +140,11 @@ body {
   top: 0px;
   left: 0px;
 }
-
+#timing_overlay{
+  position: relative;
+  top: 0px;
+  left: 0px;
+}
 
 
 
@@ -173,7 +177,7 @@ area {
 #car_share_overlay,
 #bike_repair_overlay,
 #pay_station_overlay,
-#motorcycle_overlay{
+#motorcycle_overlay,#timing_overlay{
   display: none
 }
 
