--- a/views/partials/overlay.hbs
+++ b/views/partials/overlay.hbs
@@ -17,6 +17,7 @@
             <img id="car_share_overlay" src="/media/overlays/car_share_parking.png" usemap="#image-map">
             <img id="pay_station_overlay" src="/media/overlays/paystation_overlay.png" usemap="#image-map">
             <img id="motorcycle_overlay" src="/media/overlays/motorcycle_overlay.png" usemap="#image-map">
+            <img id="timing_overlay" src="/media/overlays/timing_merged.png" usemap="#image-map">
             <img id="image" src="/media/burnaby_campus_map.png" usemap="#image-map">
             <map id="image_map" name="image-map">
                 <!-- Food Locations-->
