--- a/public/css/basic-nav-stylesheet.css
+++ b/public/css/basic-nav-stylesheet.css
@@ -94,17 +94,11 @@ body {
   border-bottom-left-radius: 40px;
 }
 
-#image {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-}
-#bus_stops_overlay {
+/* #bus_stops_overlay {
   position: relative;
   top: 0px;
   left: 0px;
-}
+} */
 
 #student_parking_overlay {
   position: relative;
@@ -142,7 +136,11 @@ body {
 }
 
 
-
+#image {
+  position: relative;
+  top: 0;
+  left: 0;
+}
 
 #image_map {
   position: absolute;
@@ -160,6 +158,7 @@ area {
   display:none;
 }
 
+#bus_stops_overlay,
 #campus_entrances_overlay, 
 #employee_parking_overlay, 
 #first_aid_overlay, 
@@ -183,9 +182,24 @@ area {
 
 #details_box {
   position: absolute;
-  bottom: 0px;
+  bottom: 100px;
+  height: 100px;
+  display: none;
 }
 
 .mapster_tooltip {
   pointer-events: none;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: #888;
 }
