--- a/views/services-supports.hbs
+++ b/views/services-supports.hbs
@@ -2,44 +2,16 @@
     Campus Services and Supports
 </div>
 <div id="campus-map" class="campus-map">
-    {{!-- <div class="col-sm-2">
+    <div class="col-sm-2">
         <div class="sidenav">
-            <div class="sidenav-cont">
-                <button class="dropdown-btn">Academic Learning Services <i class="fa fa-caret-down"></i> </button>
-                <div class="dropdown-container">
-                    <button>Accessibility Services</button>
-                </div>
-                <button class="dropdown-btn">Health and Wellness <i class="fa fa-caret-down"></i> </button>
-                <div class="dropdown-container">
-                    <button>Accessibility Services</button>
-                </div>
-                <button class="dropdown-btn">Career Services <i class="fa fa-caret-down"></i> </button>
-                <div class="dropdown-container">
-                    <button>Accessibility Services</button>
-                </div>
-                <button class="dropdown-btn">Student Life <i class="fa fa-caret-down"></i> </button>
-                <div class="dropdown-container">
-                    <button data-building="SW01" data-service="Accessibility Services"  data-description="Accessibility Services provides access and accommodation to
-individuals with invisible, temporary and/or permanent functional
-limitations, or disabilities. Support may include exam and classroom
-accommodations, interpreting, transcribing, alternate format
-material and access to adaptive technology" onclick="selectAcademicSchools('SW01, SW02', 'SW01', 'MMMMM MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM MMMMMMMMMMMMMMMMMM MMMMMMMMMMMMMMMM MMMMMMMMMMMMMMMM MM MMMMMMM MMMMM MMMMMM MMMMMMMM MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM MMMMMMMMMMMM MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM MMMMMMMMMMMMMMMMMMMMMMMM MMMMMMMMMMMMMMMMMM')">Accessibility Services</button>
-                </div>
-                <button class="dropdown-btn">Financial Aid <i class="fa fa-caret-down"></i> </button>
-                <div class="dropdown-container">
-                    <button>Accessibility Services</button>
-                </div>
-                <button class="dropdown-btn">Student Safety and Responsibility <i class="fa fa-caret-down"></i> </button>
-                <div class="dropdown-container">
-                    <button>Accessibility Services</button>
-                </div>
+            <div id="sidenav" class="sidenav-cont">   
             </div>
         </div>
     </div>
     <div class="col-sm-10">
         {{>overlay}}
         <button name="mainMenu" onclick="main_menu()" id="main-menu-btn">Main Menu</button>
-    </div> --}}
+    </div>
 </div>
 <div id="loading" class="d-flex justify-content-center align-items-center" style="height: 100%">
     <div class="spinner-border" style="width: 6rem; height: 6rem;" role="status">
@@ -47,4 +19,5 @@ material and access to adaptive technology" onclick="selectAcademicSchools('SW01
     </div>
 </div>
 <script src="/panzoom/panzoom.js"></script>
+<script src="js/zoom.js"></script>
 <script src="js/services.js"></script>
