flickering fix included for all css

--- a/views/basic-nav.hbs
+++ b/views/basic-nav.hbs
@@ -13,7 +13,7 @@
                     <button>Student Housing to NE01</button>
                     <button>Willingdon Avenue to Wayburne Drive</button>
                     <button>CARI Building to Wayburne Drive</button>
-                </div> -->
+                </div>
                 <button onclick="selectTransit()">Transit Information
                 </button>
                 {{!-- <div class="dropdown-container">
