added an accessibility route image
added an accessibility route image

--- a/views/basic-nav.hbs
+++ b/views/basic-nav.hbs
@@ -53,7 +53,7 @@
                     <button>Trades Buildings</button>
                     <button onclick="toggleDisplay(this)" value="bike_overlay">Bicycle Route Information</button>
                 </div> --}}
-                <button >Accessibility Routes</button>
+                <button onclick="toggleAccessibility()">Accessibility Routes</button>
                 <button class="dropdown-btn" onclick="toggleDropdown(this)">Parking Information
                     <i class="fa fa-caret-down"></i>
                 </button>
