--- a/views/partials/overlay.hbs
+++ b/views/partials/overlay.hbs
@@ -185,8 +185,9 @@
                 <area target="" class="ps_parking" id="PS9"  full= "pay station"        building = "PS9"  paystation-key= "PS9" alt="PS9"  title="" href="" coords="2924,939,2988,993" shape="rect">
                 <area target="" class="ps_parking" id="PS10" full= "pay station"        building = "PS10" paystation-key= "PS10"alt="PS10" title="" href="" coords="2519,1407,2573,1453" shape="rect"></map>
 
+            <!--Campus Square-->
+                <area target="" class="CampusSquare" full="Campus Square" id="" building="CampusSquare" alt="CampusSquare" title="" href="" coords="991,835,1098,921" shape="rect">
 
-        
         </div>
     </div>
 </div>
