fixed campus square highlighting
fixed campus square highlighting

--- a/views/partials/overlay.hbs
+++ b/views/partials/overlay.hbs
@@ -183,10 +183,12 @@
                 <area target="" class="ps_parking" id="PS7"  full= "pay station"        building = "PS7"  paystation-key= "PS7" alt="PS7"  title="" href="" coords="1914,363,1964,413" shape="rect">
                 <area target="" class="ps_parking" id="PS8"  full= "pay station"        building = "PS8"  paystation-key= "PS8" alt="PS8"  title="" href="" coords="2795,532,2845,582" shape="rect">
                 <area target="" class="ps_parking" id="PS9"  full= "pay station"        building = "PS9"  paystation-key= "PS9" alt="PS9"  title="" href="" coords="2924,939,2988,993" shape="rect">
-                <area target="" class="ps_parking" id="PS10" full= "pay station"        building = "PS10" paystation-key= "PS10"alt="PS10" title="" href="" coords="2519,1407,2573,1453" shape="rect"></map>
+                <area target="" class="ps_parking" id="PS10" full= "pay station"        building = "PS10" paystation-key= "PS10"alt="PS10" title="" href="" coords="2519,1407,2573,1453" shape="rect">
 
             <!--Campus Square-->
-                <area target="" class="CampusSquare" full="Campus Square" id="" building="CampusSquare" alt="CampusSquare" title="" href="" coords="991,835,1098,921" shape="rect">
+                <area target="" class="CampusSquare" full="Campus Square" id="CampusSquare" building="CampusSquare" alt="CampusSquare" title="" href="" coords="991,835,1098,921" shape="rect">
+
+                </map>
 
         </div>
     </div>
