food locations now dynamically created

--- a/views/partials/overlay.hbs
+++ b/views/partials/overlay.hbs
@@ -21,15 +21,15 @@
             <img id="image" src="/media/burnaby_campus_map.png" usemap="#image-map">
             <map id="image_map" name="image-map">
                 <!-- Food Locations-->
-                <area target="" class="food_icon_map" id="FI01" building="FI01" alt="NE01" full="J.W. Inglis Café, The Pavillion" title="NE01" href="#" coords="289,537,328,572" shape="rect">
-                <area target="" class="food_icon_map" id="FI02" building="FI02" alt="SE01" full="E.T.C. Café, Grill & Co., Tim Hortons Express" title="SE01" href="#" coords="1232,255,1272,294" shape="rect">
-                <area target="" class="food_icon_map" id="FI03" building="FI03" alt="SE06" full="The Rix Café" title="SE06" href="#" coords="1185,494,1224,537" shape="rect">
-                <area target="" class="food_icon_map" id="FI04" building="FI04" alt="SE02" full="Habitat Pub, Market Kitchen, Poké Pick, The Rix Club, The Stand, Town Square Market, Triple O's" title="SE02" href="#" coords="1050,650,1089,689" shape="rect">
-                <area target="" class="food_icon_map" id="FI05" building="FI05" alt="SE14" full="Booster Juice, Library Coffee Pod" title="SE14" href="#" coords="1615,507,1650,550" shape="rect">
-                <area target="" class="food_icon_map" id="FI06" building="FI06" alt="SE12" full="All-Day Breakfast + Lunch, Austin Grill Express, Campus Café, Smokes Poutinerie, The Stand, Tim Hortons" title="SE12" href="#" coords="1519,733,1559,776" shape="rect">
-                <area target="" class="food_icon_map" id="FI07" building="FI07" alt="SW01" full="Gateway Café, Gateway Deli" title="SW01" href="#" coords="1180,945,1215,980" shape="rect">
-                <area target="" class="food_icon_map" id="FI08" building="FI08" alt="SE40" full="Royal Oak Café" title="SE40" href="#" coords="3433,225,3476,268" shape="rect">
-                <area target="" class="food_icon_map" id="FI09" building="FI09" alt="CARI" full="CARI Café" title="CARI" href="#" coords="2528,1349,2572,1393" shape="rect">
+                <area target="" class="food_icon_map" id="FI01" building="FI01" alt="NE01" full="" title="NE01" href="#" coords="289,537,328,572" shape="rect">
+                <area target="" class="food_icon_map" id="FI02" building="FI02" alt="SE01" full="" title="SE01" href="#" coords="1232,255,1272,294" shape="rect">
+                <area target="" class="food_icon_map" id="FI03" building="FI03" alt="SE06" full="" title="SE06" href="#" coords="1185,494,1224,537" shape="rect">
+                <area target="" class="food_icon_map" id="FI04" building="FI04" alt="SE02" full="" title="SE02" href="#" coords="1050,650,1089,689" shape="rect">
+                <area target="" class="food_icon_map" id="FI05" building="FI05" alt="SE14" full="" title="SE14" href="#" coords="1615,507,1650,550" shape="rect">
+                <area target="" class="food_icon_map" id="FI06" building="FI06" alt="SE12" full="" title="SE12" href="#" coords="1519,733,1559,776" shape="rect">
+                <area target="" class="food_icon_map" id="FI07" building="FI07" alt="SW01" full="" title="SW01" href="#" coords="1180,945,1215,980" shape="rect">
+                <area target="" class="food_icon_map" id="FI08" building="FI08" alt="SE40" full="" title="SE40" href="#" coords="3433,225,3476,268" shape="rect">
+                <area target="" class="food_icon_map" id="FI09" building="FI09" alt="CARI" full="" title="CARI" href="#" coords="2528,1349,2572,1393" shape="rect">
 
             <!--            NE Buildings-->
                 <area target="" class="NE Building" full="NE09 Building" id="NE09" building="NE09" alt="NE09" title="" href="#" coords="184,133,184,255,350,255,350,133,310,133,297,172,237,172,241,133" shape="poly">
