--- a/views/other-key-places.hbs
+++ b/views/other-key-places.hbs
@@ -5,7 +5,7 @@
     <div class="col-sm-2">
         <div class="sidenav">
             <div class="sidenav-cont">
-                <button id="Food" onclick="selectFoods('{{foodLocations}}', this.innerText, '{{foodDescription}}', '{{foodLink}}')">Food &amp; Coffee</button>
+                <button id="Food" onclick="selectFoods('{{foodLocations}}', this.innerText, '{{foodDescription}}', '{{foodLink}}', '{{foodPlaceNames}}')">Food &amp; Coffee</button>
                 <button id="Microwaves" onclick="selectMicrowaves('{{microwavesLocations}}')">Microwaves</button>
                 <button id="Social" onclick="selectKeyPlaces('{{socialBuildings}}', '{{socialNames}}')">Social</button>
                 <button id="Study Areas" onclick="selectKeyPlaces('{{studyBuildings}}', '{{studyNames}}')">Study Areas</button>
@@ -14,7 +14,6 @@
     </div>
     <div id="map_area" class="col-sm-10">
         {{>overlay}}
-        
         <button name="mainMenu" onclick="main_menu()" id="main-menu-btn">Main Menu</button>
     </div>
 </div>
