styling changes per Client

--- a/views/main-menu.hbs
+++ b/views/main-menu.hbs
@@ -1,30 +1,15 @@
-<div class="jumbotron">
-  <h3>Main Menu</h3>
+<div class="heading">
+  Main Menu
 </div>
 
 <div class="container">
   <div class="row">
     <div class="col-sm-5 main-menu-nav">
-      {{!-- <form class="main-menu-nav" action="/basic_nav" method="GET">
-          <button type="submit" name="basicNav">Basic Navigation</button>
-      </form>
-      <form class="main-menu-nav" action="/academic_buildings" method="GET">
-          <button type="submit" name="academicBuildings">Academic Buildings</button>
-      </form>
-      <form class="main-menu-nav" action="/services_supports" method="GET">
-          <button type="submit" name="servicesSupports">Campus Services and Supports</button>
-      </form>
-      <form class="main-menu-nav" action="/other_key_places" method="GET">
-          <button type="submit" name="otherKeyPlaces">Other Key Places</button>
-      </form>
-      <form class="main-menu-nav" action="/finish" method="GET">
-          <button type="submit" name="otherKeyPlaces">Finish</button>
-      </form>   --}}
-      <button onclick="basic_nav()" name="basicNav">Basic Navigation</button>
-      <button onclick="academic_buildings()" name="academicBuildings">Academic Buildings</button>
-      <button onclick="services_supports()" name="servicesSupports">Campus Services and Supports</button>
-      <button onclick="other_key_places()" name="otherKeyPlaces">Other Key Places</button>
-      <button onclick="finish()" name="otherKeyPlaces">Finish</button>
+      <button onclick="basic_nav()" name="basicNav">BASIC NAVIGATION ></button>
+      <button onclick="academic_buildings()" name="academicBuildings">ACADEMIC BUILDINGS ></button>
+      <button onclick="services_supports()" name="servicesSupports">CAMPUS SERVICES ></button>
+      <button onclick="other_key_places()" name="otherKeyPlaces">OTHER KEY PLACES ></button>
+      <button onclick="finish()" name="otherKeyPlaces">FINISH ></button>
     </div>
     <div class="col-sm-7">
       Finding your way around any new place can be difficult and BCIT is no different. While the best way to learn to navigate campus is to do it every day, this activity will help you learn the basics before you even arrive!<br><br>
