--- a/views/services-supports.hbs
+++ b/views/services-supports.hbs
@@ -1,5 +1,5 @@
 <div class="heading">
-    Campus Services and Supports
+    Campus Services
 </div>
 <div id="campus-map" class="campus-map">
     <div class="col-sm-2">
