--- a/views/start.hbs
+++ b/views/start.hbs
@@ -1,8 +1,7 @@
 <img src="../media/start_background.jpg" alt="Burnaby Campus">
 <div class="col-sm-12">
-    How do I navigate the Burnaby campus?
-    {{!-- <form class="main-menu-nav" action="/main_menu" method="GET">
-        <button type="submit" name="basicNav">Start Activity</button>
-    </form> --}}
-    <button onclick="main_menu()" name="basicNav">Start Activity</button>
+    <div id="start-msg">
+        How do You Navigate the Burnaby Campus?
+        <button onclick="main_menu()" name="basicNav">START HERE ></button>
+    </div>
 </div>
