--- a/public/css/basic-nav-stylesheet.css
+++ b/public/css/basic-nav-stylesheet.css
@@ -72,7 +72,8 @@ body {
 
 .dropdown-container {
   display: none;
-  border-bottom-left-radius: 40px;
+  background-color: #003c71;
+  opacity: 0.5;
 }
 
 .fa-caret-down {
@@ -81,17 +82,18 @@ body {
 }
 
 .col-sm-2 button:hover, .dropdown-btn:hover{
-  border-top-left-radius: 40px;
-  border-bottom-left-radius: 40px;
+  background-color: #003c71;
+  opacity: 0.5;
 }
 
 .active:hover{
-  border-top-left-radius: 40px;
-  border-bottom-left-radius: 0;
+  background-color: #003c71;
+  opacity: 0.5;
 }
 
 .dropdown-container button:last-child:hover{
-  border-bottom-left-radius: 40px;
+  background-color: #025cab;
+  opacity: 0.9;
 }
 
 /* #bus_stops_overlay {
@@ -185,11 +187,20 @@ area {
 }
 
 #details_box {
-  position: absolute;
-  bottom: 0px;
-  height: 85px;
-  display: none;
-  overflow: scroll;
+    background-color: #ffea2e;
+    color: #003c71;
+    font-size: 10px;
+}
+
+#details_title {
+    font-size: 15px;
+    font-weight: bold;
+}
+
+#details_box::after {
+    position: fixed;
+    display: block;
+    bottom: 0px;
 }
 
 .mapster_tooltip {
