--- a/public/css/main-menu-stylesheet.css
+++ b/public/css/main-menu-stylesheet.css
@@ -1,26 +1,29 @@
-.jumbotron {
-    background-color: #003c71;
-    color: white;
+body {
+    overflow-x: hidden;
 }
 
-.jumbotron h3 {
-    font-size: 25px;
-    font-weight: bold;
-    margin-left: 50px;
-}
-.main-menu-nav button {
-    width: 275px;
-    height: 60px;
+.heading {
+    background-color: white;
     color: #003c71;
-    background-color: #ffea2e;
-    border: 2px solid #ffea2e;
-    border-radius: 12px;
+    width: 100%;
+    height: 50px;
     font-size: 20px;
     font-weight: bold;
-    margin-left: 40px;
-    margin-bottom: 20px;
+    padding: 10px 0 0 10px;
+    border-bottom: 1px solid #869cb0;
+}
+
+.main-menu-nav button {
+    width: 150px;
+    height: 30px;
+    color: white;
+    background-color: #003c71;
+    border: 2px solid #003c71;
+    font-size: 12px;
+    margin: 20px 0 0 30px;
 }
 
 .col-sm-7 {
-    font-size: 19px;
+    font-size: 12px;
+    margin: 20px 0 0 0;
 }
