--- a/public/css/start-stylesheet.css
+++ b/public/css/start-stylesheet.css
@@ -9,12 +9,13 @@ img {
 }
 
 .col-sm-12 {
-    font-size: 30px;
+    font-size: 15px;
     font-weight: bold;
     color: white;
-    background-color: rgba(76, 99, 80, 0.5);
-    width: 80%;
-    padding: 60px;
+    background-color: rgba(0, 60, 113, 0.7);
+    width: 100%;
+    height: 100%;
+    padding: 50px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -22,15 +23,21 @@ img {
     text-align: center;
 }
 
+#start-msg {
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    padding: 130px;
+}
+
 button {
-    color: #003c71;
-    background-color: #ffea2e;
-    width: 150px;
+    color: #308fe3;
+    background-color: white;
+    width: 180px;
     height: 40px;
     text-align: inherit;
-    border: 2px solid #ffea2e;
-    border-radius: 12px;
-    font-size: 18px;
+    border: 2px solid #308fe3;
+    font-size: 14px;
     font-weight: bold;
     display: flex;    
     margin-left: auto;
