--- a/public/css/basic-nav-stylesheet.css
+++ b/public/css/basic-nav-stylesheet.css
@@ -196,6 +196,11 @@ area {
   pointer-events: none;
 }
 
+.fa-arrow-right {
+  position: absolute;
+  right: 10px;
+}
+
 ::-webkit-scrollbar {
   width: 10px;
 }
