--- a/public/css/overlay.css
+++ b/public/css/overlay.css
@@ -5,3 +5,16 @@
 #outer-map {
     overflow: auto;
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: #888;
+  }
