--- a/public/css/overlay.css
+++ b/public/css/overlay.css
@@ -7,7 +7,8 @@
 }
 
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 5px;
+    height: 5px;
   }
   
   ::-webkit-scrollbar-track {
@@ -15,6 +16,6 @@
   }
   
   ::-webkit-scrollbar-thumb {
-    border-radius: 10px;
+    border-radius: 5px;
     background: #888;
   }
