Add restart button to finish page

--- a/views/finish.hbs
+++ b/views/finish.hbs
@@ -3,6 +3,7 @@
     <div id="finish-msg">
         Congratulations! You have now learned the basics of navigating BCIT's Burnaby Campus!<br><br>
         Use what you learned in this activity to help orient yourself on campus during your first days at school!<br>
+        <button onclick="start()">RESTART ></button>
         <button>FINISH ></button>
     </div>
 </div>
