--- a/public/css/finish-stylesheet.css
+++ b/public/css/finish-stylesheet.css
@@ -41,8 +41,6 @@ button {
     font-size: 14px;
     font-weight: bold;
     display: flex;    
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 40px;
+    margin: 20px auto 20px auto;
     justify-content: center;
 }
